# termin-catcher

./: README.md  pyproject.toml
bot/: target_page.py  test_termin_catcher.py
bot/utils/: screenshots_utils.py  speech_utils.py  time_utils.py
